[gd_scene load_steps=4 format=3 uid="uid://cwm1swxwto6co"]

[ext_resource type="Script" path="res://Scripts/spark.gd" id="1_4o2ly"]

[sub_resource type="Gradient" id="Gradient_b5t8t"]
offsets = PackedFloat32Array(0, 0.649351)
colors = PackedColorArray(0, 0, 0, 1, 1, 0.203922, 0.196078, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wxp1d"]
gradient = SubResource("Gradient_b5t8t")

[node name="Spark" type="Node2D"]
position = Vector2(20, 0)
script = ExtResource("1_4o2ly")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-20, -9.38773e-07)
rotation = 0.785398
scale = Vector2(0.18, 0.18)
texture = SubResource("GradientTexture2D_wxp1d")

[node name="RayRight" type="RayCast2D" parent="."]
position = Vector2(-20, 0)
target_position = Vector2(9, 0)

[node name="RayDown" type="RayCast2D" parent="."]
position = Vector2(-20, 0)
rotation = 1.5708
target_position = Vector2(9, -3.93403e-07)

[node name="RayLeft" type="RayCast2D" parent="."]
position = Vector2(-20, 0)
rotation = 3.14159
target_position = Vector2(9, -7.86805e-07)

[node name="RayUp" type="RayCast2D" parent="."]
position = Vector2(-20, 0)
rotation = -1.5708
target_position = Vector2(9, 3.93403e-07)
